fix: remediate OWASP A05 - CORS and H2 misconfiguration